# news

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  config.json  install_scheduler.sh  main.py  pyproject.toml  sources.json  uninstall_scheduler.sh
agents/: analyzer.py  chat.py  mcp_tools.py
core/: article_manager.py  database.py  feed_fetcher.py  feedback_manager.py  profile_manager.py  source_manager.py
interfaces/: chat_cli.py  chat_slack.py  fetch_and_analyze_cli.py
